<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#FFFFFF"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:padding="16dp"


    >
  <EditText
      android:id="@+id/et_total"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="16dp"
android:inputType="numberDecimal"
      android:hint="@string/cost_or_total_price"

      />

  <TextView
      android:id="@+id/textView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:padding="16dp"
      android:textSize="18sp"
      android:textStyle="bold"
      android:text="@string/select_vat_percentage" />

  <RadioGroup
    android:id="@+id/percent"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:theme="@style/Theme.VatApp"
      >

    <RadioButton
        android:id="@+id/percent_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        />
    <RadioButton
        android:id="@+id/percent_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_15"/>
    <RadioButton
        android:id="@+id/percent_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_20"/>

  </RadioGroup>

  <androidx.appcompat.widget.SwitchCompat
      android:id="@+id/switch_round_up"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/round_up_total"
      android:layout_marginVertical="16dp"
      android:theme="@style/Theme.VatApp"
      />
  <Button
      android:id="@+id/btn"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Calculate VAT"
      android:layout_marginBottom="16dp"/>
</LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:background="@android:drawable/dialog_holo_light_frame"
      android:padding="16dp">
  <TextView
      android:id="@+id/txt_cost_total"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="16dp"
android:text="Cost :"
      />
    <TextView
        android:id="@+id/txt_vat_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="VAT"
        />
    <TextView
        android:id="@+id/txt_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="total"
        />
  </LinearLayout>

</LinearLayout>